<resources>
    <string name="app_name">MemoryGame</string>
    <string name="game_name">Memory Game</string>
    <string name="play_button_name">Play</string>
    <string name="choose_name">Choose a theme</string>
    <string name="level_button_1">Level 1</string>
    <string name="level_button_2">Level 2</string>
    <string name="level_button_3">Level 3</string>
    <string name="level_button_4">Level 4</string>
    <string name="menu">Menu</string>
    <string name="next">Next</string>
    <string name="title_activity_5">Activity5</string>
    <string name="title_activity_6">Activity6</string>
    <string name="title_activity_7">Activity7</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="music">Music</string>
    <string name="clickHere">click here to exit</string>


</resources>
