<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelActivity"
    android:background="@drawable/background">

    <ImageButton
        android:id="@+id/back_button2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="#00000000"
        android:src="@drawable/ic_back_button"
        android:onClick="backButtonPressed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_level_1"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="236dp"
        android:background="@drawable/round_button_pink"
        android:fontFamily="cursive"
        android:onClick="levelButtonPressed"
        android:text="@string/level_button_1"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,OnClick" />

    <Button
        android:id="@+id/button_level_2"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/round_button_pink"
        android:fontFamily="cursive"
        android:text="@string/level_button_2"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_level_3"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="210dp"
        android:background="@drawable/round_button_pink"
        android:fontFamily="cursive"
        android:text="@string/level_button_3"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_level_4"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="210dp"
        android:background="@drawable/round_button_pink"
        android:fontFamily="cursive"
        android:text="@string/level_button_4"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>